--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Utils
   intl: ^0.20.2
   logger: ^2.5.0
+  url_launcher: ^6.2.2 
+  timeago: ^3.2.2 
   
   # Form Validation
   form_validator: ^2.1.1
