--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   loading_animation_widget: ^1.3.0
+  webview_flutter: ^4.0.0
+  open_file: ^3.3.0
+  webview_flutter_android: ^3.0.0
+  webview_flutter_wkwebview: ^3.0.0
   
   # Utils
   intl: ^0.20.2
