--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   # State Management
   provider: ^6.1.2
   path_provider: ^2.1.5
+  path_provider_platform_interface: ^2.0.0
+  path_provider_foundation: ^2.0.0
+  path_provider_android: ^2.0.0
   
   # Network & API
   http: ^1.3.0
@@ -60,3 +63,4 @@ flutter:
   # assets:
   #   - assets/images/
   #   - assets/icons/
+
