--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   device_info_plus: ^11.3.3
   
   # UI Components
-  flutter_svg: ^2.0.17
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   loading_animation_widget: ^1.3.0
@@ -40,6 +39,8 @@ dependencies:
   webview_flutter_android: ^3.0.0
   webview_flutter_wkwebview: ^3.0.0
   table_calendar: ^3.2.0
+  flutter_svg: ^2.1.0
+  fl_chart: ^1.0.0
   
   
   # Utils
