--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   logger: ^2.5.0
   url_launcher: ^6.2.2 
   timeago: ^3.2.2 
+  flutter_local_notifications: ^19.2.0
+  timezone: ^0.10.1
   
   # Form Validation
   form_validator: ^2.1.1
