--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   timeago: ^3.2.2 
   flutter_local_notifications: ^19.2.0
   timezone: ^0.10.1
+  socket_io_client: ^3.1.2
   
   # Form Validation
   form_validator: ^2.1.1
