--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   table_calendar: ^3.2.0
   flutter_svg: ^2.1.0
   fl_chart: ^1.0.0
+  emoji_picker_flutter: ^4.3.0
   
   
   # Utils
