--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,12 @@ dependencies:
   # Storage
   shared_preferences: ^2.5.2
   image_picker: ^1.1.2
+  file_picker: ^10.1.9
   mime: ^2.0.0
   permission_handler: ^11.4.0
   device_info_plus: ^11.3.3
+  universal_html: ^2.2.4
+  share_plus: ^11.0.0
   
   # UI Components
   cached_network_image: ^3.4.1
@@ -52,6 +55,7 @@ dependencies:
   flutter_local_notifications: ^19.2.0
   timezone: ^0.10.1
   socket_io_client: ^3.1.2
+  flutter_pdfview: ^1.4.0+1
   
   # Form Validation
   form_validator: ^2.1.1
