--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.1.0
   fl_chart: ^1.0.0
   emoji_picker_flutter: ^4.3.0
+  flutter_markdown: ^0.7.7+1
   
   
   # Utils
